public interface crazy  {
    default void crazy_things(){
        System.out.println("do some crazy things");
    }
}
