public enum destr{
    СЛОМАН,
    ИСКРОМСАН,
    ИСПОЛЬЗОВАН,
    ПУСТ,
    ПОМЯТ,
    РАЗРУШЕН,
    ОБГОРЕВШИЙ,
    ОТКРЫТ



}
